--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ h4 {
     font-family: "Exo" sans-serif;
     font-weight: 300;
     margin-top: 25px;
-    margin-bottom: 40px;
+    margin-bottom: 40px; 
 }
 
 /*-----------------------------------------------------Headings*/
@@ -209,4 +209,15 @@ footer {
 
 #footer-details {
     padding: 20px;
+}
+
+/*-----------------------------------------------------Three reasons */
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #e67e22;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
 }
